# GStreamer-HLS-Live-Video-Streaming

./: README.md
playvideo/: CMakeLists.txt  index.html  playvideo.c
webcam/: CMakeLists.txt  index.html  webcam.c
